--- a/views/100.ejs
+++ b/views/100.ejs
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/100.css' />
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body class="flex-center">
+    <div class="main-container flex flex-column">
+      <div class="menu-container flex">
+        <div class="menu flex1 flex-center">속성 추가</div>
+        <div class="menu flex1 flex-center">아이템 추가</div>
+        <div class="menu flex1 flex-center">이미지 생성</div>
+        <div class="menu flex1 flex-center">이미지 확인</div>
+        <div class="menu flex1 flex-center">테스트 조합</div>
+        <div class="menu flex1 flex-center">초기화</div>
+      </div>
+      <div class="list-container flex1"></div>
+    </div>
   </body>
 </html>
