--- a/views/100.ejs
+++ b/views/100.ejs
@@ -14,7 +14,47 @@
         <div class="menu flex1 flex-center">테스트 조합</div>
         <div class="menu flex1 flex-center">초기화</div>
       </div>
-      <div class="list-container flex1"></div>
+      <div class="list-container flex1">
+        <div class="flex property-list flex-column">
+          <div>
+            <button>속성1</button>
+            <div>
+              <button>아이템1</button>
+              <button>아이템1</button>
+              <button>아이템1</button>
+            </div>
+          </div>
+
+          
+          <div>
+            <button>속성1</button>
+            <div>
+              <button>아이템1</button>
+              <button>아이템1</button>
+              <button>아이템1</button>
+            </div>
+          </div>
+
+          
+          <div>
+            <button>속성1</button>
+            <div>
+              <button>아이템1</button>
+              <button>아이템1</button>
+              <button>아이템1</button>
+            </div>
+          </div>
+          
+        </div>
+        <div class="flex1 flex-column">
+          <div class="flex1">
+            예시 이미지
+          </div>
+          <div class="flex1">
+            예시 이미지 속성
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
