--- a/public/stylesheets/100.css
+++ b/public/stylesheets/100.css
@@ -63,10 +63,22 @@
 }
 
 .card {
+    position: relative;
     width: 300px;
     height: 400px;
     margin-top: 20px;
     background-color: rgb(255, 255, 255);
     border: 1px solid rgb(229, 232, 235);
     border-radius: 10px;
+}
+
+.card > .image {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    background-position: center;
+    background-size: 300px;
+    background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
